--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
-  display:flex;
+  /* display:flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+  padding:3rem;
   min-height: 100vh;
 }
 .vh30{
